--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,23 +9,30 @@ services:
       - 8.8.4.4
     ports:
       - "8000:8000"
-    depends_on:
-      - db
-    environment:
-      - DATABASE_URL=${DATABASE_URL}
    
-    command:  "uvicorn main:app --host 0.0.0.0 --port 8000 --ssl-keyfile /etc/uvicorn/ssl/selfsigned.key --ssl-certfile /etc/uvicorn/ssl/selfsigned.crt --log-level debug"
-      
-  db:
-    image: postgres:13
-    ports:
-      - "5432:5432"
     environment:
-      POSTGRES_USER: ${DB_USER}  
-      POSTGRES_PASSWORD: ${DB_PASSWORD}  
-      POSTGRES_DB: ${DB_NAME}  
+      - REDIS_SERVER=redis-cache
+      - REDIS_PORT=6379
+      
+    depends_on:
+      - redis-cache
+    command:  "poetry run uvicorn main:app --reload "
+      
+  
+
+  redis-cache:
+    image: redis
+    hostname: redis-cache
+    container_name: redis-cache
+    restart: on-failure
+    ports:
+      - '6379:6379'
+    command: redis-server
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - cache:/data
 
 volumes:
-  postgres_data:
+ 
+
+  cache:
+    driver: local
