--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,9 @@ aiohttp = "^3.10.3"
 fastapi-azure-auth = "^5.0.0"
 pydantic-settings = "^2.4.0"
 pyjwt = "^2.9.0"
+celery = "^5.4.0"
+flower = "^2.0.1"
+redis = ">=4.0"
 
 
 [build-system]
