added redis locker to avoid submit files with the same slug simultaneously

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,7 +25,7 @@ services:
     hostname: redis-cache
     container_name: redis-cache
     restart: on-failure
-    command: redis-server
+    command: redis-server --maxmemory 256mb --maxmemory-policy allkeys-lru
     volumes:
       - cache:/data
 
