--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
 
   web:
     build: .  
-    image: presentation_iiif
+    image: ${DOCKER_IMAGE}
     container_name: fastapi_iiif
     
     dns:
