--- a/.github/workflows/master_crkn-iiif-presentation-api.yml
+++ b/.github/workflows/master_crkn-iiif-presentation-api.yml
@@ -22,13 +22,14 @@ jobs:
         with:
           python-version: '3.12'
 
-      - name: Create and start virtual environment
+      - name: Install Poetry
         run: |
-          python -m venv venv
-          source venv/bin/activate
-      
+          curl -sSL https://install.python-poetry.org | python3 -
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
+
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+          poetry install --no-dev
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
