--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,9 @@ redis = ">=4.0"
 aioboto3 = "^13.2.0"
 
 
+[tool.poetry.group.dev.dependencies]
+locust = "^2.32.1"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
