--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 uvicorn = "^0.30.3"
-fastapi = "^0.111.1"
+fastapi = "^0.115.5"
 sqlalchemy = "^2.0.31"
 alembic = "^1.13.2"
 aiopg = "^1.4.0"
@@ -19,7 +19,7 @@ iiif-prezi = "^0.3.0"
 jsonschema = "^4.23.0"
 jsonpath-rw = "^1.4.0"
 python-swiftclient = "^4.6.0"
-aiohttp = "^3.10.3"
+aiohttp = "^3.10.11"
 fastapi-azure-auth = "^5.0.0"
 pydantic-settings = "^2.4.0"
 pyjwt = "^2.9.0"
@@ -27,6 +27,9 @@ celery = "^5.4.0"
 flower = "^2.0.1"
 redis = ">=4.0"
 aioboto3 = "^13.2.0"
+cryptography = "^43.0.1"
+starlette = "^0.40.0"
+python-multipart = "^0.0.17"
 
 
 [tool.poetry.group.dev.dependencies]
