--- a/.github/workflows/master_crkn-iiif-presentation-api.yml
+++ b/.github/workflows/master_crkn-iiif-presentation-api.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          poetry install --no-dev
+          poetry install --without dev
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
