--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,10 @@ description = ""
 authors = ["mary-crkn <mzheng@crkn.ca>"]
 readme = "README.md"
 
+packages = [
+    { include = "presentation_api" }
+]
+
 [tool.poetry.dependencies]
 python = "^3.12"
 uvicorn = "^0.30.3"
